<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="191dp"

        app:srcCompat="@drawable/kue" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:ems="10"
        android:hint="   Username"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="@color/hintColor"
        android:textSize="21sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:ems="10"
        android:layout_margin="10sp"
        android:hint="   Password"
        android:inputType="textPassword"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="@color/hintColor"
        android:textSize="21sp"/>

    <Button
        android:id="@+id/button_cash"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? " />

        <Button
            android:id="@+id/button_start_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/color_purple"
            android:text="Sign up here!"/>
    </LinearLayout>

</LinearLayout>